--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@ body {
   margin: 0;
   padding: 0;
   /*font-family: sans-serif;*/
-  font-family: 'Atma', cursive;
+  font-family: "Atma", cursive;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 #root {
@@ -21,7 +27,8 @@ body {
   position: absolute;
   left: -80px;
   transform: rotate(270deg);
-  background: url(https://cdn-images-1.medium.com/fit/c/200/200/1*PKHCHuLxDyZ8SV3PKxzizA.png) no-repeat center center / 100%;
+  background: url(https://cdn-images-1.medium.com/fit/c/200/200/1*PKHCHuLxDyZ8SV3PKxzizA.pnga) no-repeat center center /
+    100%;
   width: 85px;
   height: 180px;
   top: 40%;
