--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   position: absolute;
   left: -80px;
   transform: rotate(270deg);
-  background: url(https://cdn-images-1.medium.com/fit/c/200/200/1*PKHCHuLxDyZ8SV3PKxzizA.pnga) no-repeat center center /
+  background: url(https://cdn-images-1.medium.com/fit/c/200/200/1*PKHCHuLxDyZ8SV3PKxzizA.png) no-repeat center center /
     100%;
   width: 85px;
   height: 180px;
